# snapsort

./: .gitignore  README.md  pyproject.toml  requirements.txt  snapSort_prompt.md  snapsort.spec
.github/workflows/: release.yml
scripts/: build_macos.sh  entitlements.plist  entry_snapsort.py
src/snapsort/: __init__.py  analyzer.py  cli.py  config.py  mover.py  runner.py  scanner.py
src/snapsort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
